added bg-img& logo svg

--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
     <header class="header">
       <div class="container">
         <nav class="header-nav">
-          <a href="./index.html" class="header-logo">лого</a>
+          <a href="./index.html" class="header-logo">
+            <svg width="44" height="44">
+              <use href="./images/sprite.svg#icon-logo"></use>
+            </svg>
+          </a>
           <ul class="header-nav-list">
             <li class="header-nav-item">
               <a href="" class="header-nav-link">Про мене</a>
@@ -42,7 +46,10 @@
               <a href="" class="header-nav-link">Матеріали</a>
             </li>
             <li class="header-nav-item">
-              <a href="" class="header-nav-link">Процедури</a>
+              <a href="" class="header-nav-link header-nav-right">Процедури</a>
+            </li>
+            <li class="header-nav-item">
+              <a href="" class="header-nav-link header-nav-right">Контакти</a>
             </li>
           </ul>
         </nav>
